[0.4.11][WIN32SS][COMCTL32][BROWSEUI] Fix multiple scrollbar redraw issues

This fixes:
- CORE-15911 "Scrollbars do not disappear when Maximizing and not needed"
- CORE-10617 "ListView corrupt scrollbar upon resizing the column-header"

and fixes regressions:
- CORE-15429 "Uninitialized scrollbars in 'My Computer' permanently drawn"
- CORE-16466 "Uninitialized scrollbars in 'My Computer' do still flash up for a fraction of a second before getting overpainted"
both unhidden by SVN r75735 == git 0.4.7-dev-168-g 6af37fd54e53658bb4d832d01e4ee2546af98835

by porting back the commits:
0.4.14-dev-312-g b931f643e35e6a23dbef99e785804039ea579b6a
0.4.13-dev-535-g 1158c241941a13d8374f3f1b3016c672c824e7f0

this package supersedes and allows us to undo the temporary workaround in browseui that we used exclusively for 0.4.11:
0.4.11-RC-19-g 7fd1b51e8de74e1ee473f748892dfae1e35fed76